--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div>
-      <button class="del-bg"button" value="">Best Adder Ever</button>
+      <a href="bestAdder.html" class="del-bg">Best Adder Ever</a>
     </div>
     <div id="background"><!-- Main background -->
 
@@ -18,13 +18,13 @@
 
              <div id="main">
                  <div id="first-rows">
-                  <button class="del-bg" id="delete">Del</button>
+                     <button class="del-bg" id="delete">Del</button>
                      <button value="%" class="btn-style operator opera-bg fall-back">%</button>
                      <button value="+" class="btn-style opera-bg value align operator">+</button>
                      </div>
 
                    <div class="rows">
-                 <button value="7" class="btn-style num-bg num first-child">7</button>
+                     <button value="7" class="btn-style num-bg num first-child">7</button>
                      <button value="8" class="btn-style num-bg num">8</button>
                      <button value="9" class="btn-style num-bg num">9</button>
                      <button value="-" class="btn-style opera-bg operator">-</button>
