--- a/bestAdder.html
+++ b/bestAdder.html
@@ -8,18 +8,22 @@
     <title></title>
   </head>
   <body>
-
-      <input id="rand1" type="text" name="" value="">
-      <p>+<p>
-      <input id="rand2" type="text" name="" value="">
-      <p>=<p>
-      <input id="res" type="text" name="" value="">
+    <div id="main">
+        <div id="rows">
+          <input id="rand1" type="text" name="" value=""
+          class="btn-style num-bg num first-child">
+          <input value=" +" class="btn-style num-bg num">
+            <input id="rand2" type="text" name="" value=""
+            class="btn-style num-bg num">
+            <input value=" =" class="btn-style num-bg num">
+              <input id="res" type="text" name="" value=""
+              class="btn-style opera-bg operator">
+        </div>
+    </div>
     <div>
-
-      <div>
         <h2> are these the numbers you Wantend to ADD?  </h2>
 
-      <a href="fireworks.html" class="button">Yes</a>
+      <a href="animations/animation.html" class="button">Yes</a>
       <a href="bestAdder.html" class="button">No</a>
       </div>
       <div>
