adjusting the alert

--- a/animations/animation.html
+++ b/animations/animation.html
@@ -6,6 +6,7 @@
   <canvas id='myCanvas' width='1900' height='800'>
   </canvas>
   <script>
+
     const max_fireworks = 20,
       max_sparks = 50;
     let canvas = document.getElementById('myCanvas');
@@ -77,6 +78,9 @@
       });
       window.requestAnimationFrame(explode);
     }
+
+    setTimeout(function(){window.alert("****** Mom Look, We Made IT!!!!! ******")},3000)
+
 
   </script>
 
