--- a/bestAdder.html
+++ b/bestAdder.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <script src="adder.js">
-    </script>
-    <link rel="stylesheet" href="./styles.css">
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div id="main">
-        <div id="rows">
-          <input id="rand1" type="text" name="" value=""
-          class="btn-style num-bg num first-child">
-          <input value=" +" class="btn-style num-bg num">
-            <input id="rand2" type="text" name="" value=""
-            class="btn-style num-bg num">
-            <input value=" =" class="btn-style num-bg num">
-              <input id="res" type="text" name="" value=""
-              class="btn-style opera-bg operator">
-        </div>
-    </div>
-    <div>
-        <h2> are these the numbers you Wantend to ADD?  </h2>
 
-      <a href="animations/animation.html" class="button">Yes</a>
-      <a href="bestAdder.html" class="button">No</a>
-      </div>
-      <div>
-  </body>
+<head>
+  <script src="adder.js">
+  </script>
+  <link rel="stylesheet" href="./styles.css">
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <div id="main">
+    <div id="rows">
+      <input id="rand1" type="text" name="" value="" class="btn-style num-bg num ">
+      <input value=" +" class="btn-style num-bg num">
+      <input id="rand2" type="text" name="" value="" class="btn-style num-bg num">
+      <input value=" =" class="btn-style num-bg num">
+      <input id="res" type="text" name="" value="" class="btn-style num-bg num">
+    </div>
+  </div>
+  <div>
+    <h2> are these the numbers you Wantend to ADD? </h2>
+
+    <a href="animations/animation.html" class="btn-style num-bg num">Yes</a>
+    <a href="bestAdder.html" class="btn-style num-bg num">No</a>
+  </div>
+  <div>
+</body>
+
 </html>
