--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>
       <a href="bestAdder.html" class="del-bg">Best Adder Ever</a>
     </div>
+    <header>
     <div id="background"><!-- Main background -->
 
             <div id="result"></div>
@@ -53,6 +54,7 @@
                  </div>
 
              </div>
+           </header>
 
   </body>
 </html>
