--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <link rel="stylesheet" href="./styles.css">
     <script src="main.js">
     </script>
-
+<header>
     <title>The Basic One</title>
+  </header>
   </head>
   <body>
     <div>
       <a href="bestAdder.html" class="del-bg">Best Adder Ever</a>
     </div>
-    <header>
+    <main>
     <div id="background"><!-- Main background -->
 
             <div id="result"></div>
@@ -54,7 +55,7 @@
                  </div>
 
              </div>
-           </header>
+           </main>
 
   </body>
 </html>
