--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
     <main>
     <div id="background"><!-- Main background -->
 
-            <div id="result"></div>
+            <div id="result" class="colorFFFFFF"></div>
 
              <div id="main">
                  <div id="first-rows">
-                     <button class="del-bg" id="delete">Del</button>
-                     <button value="%" class="btn-style operator opera-bg fall-back">%</button>
-                     <button value="+" class="btn-style opera-bg value align operator">+</button>
+                     <button class="del-bg colorFFFFFF" id="delete">Del</button>
+                     <button value="%" class="btn-style operator opera-bg colorFFFFFF fall-back">%</button>
+                     <button value="+" class="btn-style opera-bg colorFFFFFF value align operator">+</button>
                      </div>
 
                    <div class="rows">
-                     <button value="7" class="btn-style num-bg num first-child">7</button>
-                     <button value="8" class="btn-style num-bg num">8</button>
-                     <button value="9" class="btn-style num-bg num">9</button>
-                     <button value="-" class="btn-style opera-bg operator">-</button>
+                     <button value="7" class="btn-style num-bg num first-child colorFFFFFF">7</button>
+                     <button value="8" class="btn-style num-bg num colorFFFFFF">8</button>
+                     <button value="9" class="btn-style num-bg num colorFFFFFF">9</button>
+                     <button value="-" class="btn-style opera-bg colorFFFFFF operator">-</button>
                      </div>
 
                      <div class="rows">
-                     <button value="4" class="btn-style num-bg num first-child">4</button>
-                     <button value="5" class="btn-style num-bg num">5</button>
-                     <button value="6" class="btn-style num-bg num">6</button>
-                     <button value="*" class="btn-style opera-bg operator">x</button>
+                     <button value="4" class="btn-style num-bg num colorFFFFFF first-child">4</button>
+                     <button value="5" class="btn-style num-bg colorFFFFFF num">5</button>
+                     <button value="6" class="btn-style num-bg colorFFFFFF num">6</button>
+                     <button value="*" class="btn-style opera-bg colorFFFFFF operator">x</button>
                      </div>
 
                      <div class="rows">
-                     <button value="1" class="btn-style num-bg num first-child">1</button>
-                     <button value="2" class="btn-style num-bg num">2</button>
-                     <button value="3" class="btn-style num-bg num">3</button>
-                     <button value="/" class="btn-style opera-bg operator">/</button>
+                     <button value="1" class="btn-style num-bg colorFFFFFF num first-child">1</button>
+                     <button value="2" class="btn-style num-bg colorFFFFFF num">2</button>
+                     <button value="3" class="btn-style num-bg colorFFFFFF num">3</button>
+                     <button value="/" class="btn-style opera-bg colorFFFFFF operator">/</button>
                      </div>
 
                      <div class="rows">
-                     <button value="0" class="num-bg zero" id="Zero">0</button>
-                     <button value="." class="btn-style num-bg period fall-back">.</button>
-                     <button value="=" id="eqn-bg" class="eqn align">=</button>
+                     <button value="0" class="num-bg colorFFFFFF zero" id="Zero">0</button>
+                     <button value="." class="btn-style num-bg colorFFFFFF period fall-back">.</button>
+                     <button value="=" id="eqn-bg" class="eqn colorFFFFFF align">=</button>
                      </div>
 
                  </div>
