--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div>
-      <a href="bestAdder.html" class="del-bg">Best Adder Ever</a>
+      <a href="bestAdder.html" >Best Adder Ever</a>
     </div>
     <main>
     <div id="background"><!-- Main background -->
