--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div>
-      <a href="bestAdder.html" >Best Adder Ever</a>
+      <a href="bestAdder.html" class="del-bg colorbgg">Best Adder Ever</a>
     </div>
     <main>
     <div id="background"><!-- Main background -->
@@ -20,7 +20,7 @@
 
              <div id="main">
                  <div id="first-rows">
-                     <button class="del-bg colorFFFFFF" id="delete">Del</button>
+                     <button class="del-bg colorbgg colorFFFFFF" id="delete">Del</button>
                      <button value="%" class="btn-style operator opera-bg colorFFFFFF fall-back">%</button>
                      <button value="+" class="btn-style opera-bg colorFFFFFF value align operator">+</button>
                      </div>
@@ -49,7 +49,7 @@
                      <div class="rows">
                      <button value="0" class="num-bg colorFFFFFF zero" id="Zero">0</button>
                      <button value="." class="btn-style num-bg colorFFFFFF period fall-back">.</button>
-                     <button value="=" id="eqn-bg" class="eqn colorFFFFFF align">=</button>
+                     <button value="=" id="eqn-bg" class="eqn color align">=</button>
                      </div>
 
                  </div>
