--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
              <div id="main">
                  <div id="first-rows">
-                     <button class="del-bg colorbgg colorFFFFFF" id="delete">Del</button>
+                     <button class="del-bg colorFFFFFF" id="delete">Del</button>
                      <button value="%" class="btn-style operator opera-bg colorFFFFFF fall-back">%</button>
                      <button value="+" class="btn-style opera-bg colorFFFFFF value align operator">+</button>
                      </div>
